T-11880 standardtotararesponsive: Fixed issue where navigation tabs would wrap on medium resolutions
Reviewed-on: https://review.totaralms.com/4514
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/navigation.css
+++ b/theme/standardtotararesponsive/style/navigation.css
@@ -255,3 +255,9 @@ ul.first-of-type li a:hover {
     color: #003466;
 
 }
+
+@media screen and (max-width:1200px) and (min-width:769px) {
+    div#totaramenu ul li a {
+        padding: 8px 20px 7px;
+    }
+}
